2010-06-19  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (hs-set-up-overlay): Setting hideshow.
	Add skeleton setting.
	(window-system): Color setting.

	* init-misc.el (smart-hl): Add smart-hl for double click highlight.

2010-06-06  Meteor Liu  <meteor1113@gmail.com>

	* init-site.el: Search global for CEDET.

2010-06-05  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Open semanticdb-enable-gnu-global-databases for
	c-mode and c++-mode.

	* init-misc.el: Add gtags and xgtags setting.
	Remove gtags.
	Search cscopt and global.

	* init-basic.el: Update semantic-ia-fast-jump-back for buildin cedet.
	: Set ede-locate-setup-options to enable global.

	* init-site.el: Update semantic-ia-fast-jump-back.
	: Enable semantic-load-enable-primary-exuberent-ctags-support.

	* init-basic.el (grep-current-dir): Update grep setting.

	* init-site.el: Add semantic-load-enable-all-exuberent-ctags-support.

2010-06-04  Meteor Liu  <meteor1113@gmail.com>

	* init-toolbar.el: Add toolbar item semantic-analyze-proto-impl-toggle.

	* init-basic.el (org-export-with-archived-trees): Org also export
	archived trees.

2010-06-03  Meteor Liu  <meteor1113@gmail.com>

	* README: Update toolbar config.

	* init-basic.el: Customize PATH in win32.

2010-06-02  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (hl-line-face): Highlight line using underline.

2010-05-31  Meteor Liu  <meteor1113@gmail.com>

	* .emacs: Modify for portable emacs.

2010-05-30  Meteor Liu  <meteor1113@gmail.com>

	* init-toolbar.el: Add toolbar setting.

2010-05-28  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Load sql-indent.el when sql.
	: Set tabbar-mode to display modified flag.

	* init-basic.el (sql-mode-hook): sql-mode Setting.

	* init-misc.el: Add ac-source-yasnippet to all ac-modes.

	* init-basic.el (kbd): Alias (kbd "ESC <f6>") to [M-f6].
	(kbd): Alias (kbd "ESC <C-f6>") to [C-M-f6].
	(grep-current-dir): When (grep-current-dir) return empty, prompt.