@@ -3,6 +3,7 @@
 	* init-basic.el (hs-set-up-overlay): Setting hideshow.
 	Add skeleton setting.
 	(window-system): Color setting.
+	(lambda): Remove the print-buffer button in the tool bar.
 
 	* init-misc.el (smart-hl): Add smart-hl for double click highlight.
 
